@@ -1290,5 +1290,14 @@
     </description>
 </item>
 
+<item>
+    <tags> 'ani' 'animations'</tags>
+    <spec> 'animations' 'ani'</spec>
+    <type>boolean</type>
+    <default>false</default>
+    <description>
+        <p>アニメーションの on/off</p>
+    </description>
+</item>
 </document>
 <!-- vim:se sts=4 sw=4 et: -->
